terraform/aws/2-vpc.tf
# Main VPC
resource "aws_vpc" "main_vpc" {
  cidr_block = "172.16.0.0/16"

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "main-vpc"
  }
}
